@@ -198,6 +198,15 @@ class InvoicesController {
       .then(data => res.send(data))
       .catch(this._handleError.bind(this, res));
   }
+
+  cheques(req, res) {
+    logService.logInfo('[inovice]  - Devuelve el dinero en efectivo pagado');
+    Promise.resolve(req.query)
+      .tap(this.invoiceValidator.isValidYear)
+      .then(this.invoiceService.cheques)
+      .then(data => res.send(data))
+      .catch(this._handleError.bind(this, res));
+  }
 }
 
 module.exports = InvoicesController;
